[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/Backgrounds/settings_text.png" type="Texture" id=1]
[ext_resource path="res://assets/casual.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SettingsMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/Sounds/Worldmap Theme_0.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/Sounds/clicked.ogg" type="AudioStream" id=7]

[sub_resource type="VideoStreamTheora" id=1]
file = "res://assets/Backgrounds/background_video.ogv"

[sub_resource type="DynamicFont" id=13]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=15]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.945098, 0.52549, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxLine" id=10]
color = Color( 0.894118, 0.705882, 0.133333, 1 )
thickness = 6

[sub_resource type="StyleBoxLine" id=12]
color = Color( 1, 0.34902, 0, 1 )
thickness = 6

[sub_resource type="StyleBoxLine" id=11]
color = Color( 1, 0.34902, 0, 1 )
thickness = 7

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
stream = SubResource( 1 )
autoplay = true

[node name="Settings" type="TextureRect" parent="."]
visible = false
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 146.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="PlayerSprite" type="Label" parent="."]
margin_left = 64.0
margin_top = 104.0
margin_right = 352.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0.960784, 0.913725, 0.305882, 1 )
custom_fonts/font = SubResource( 13 )
text = "player"

[node name="Volume" type="Label" parent="."]
margin_left = 64.0
margin_top = 232.0
margin_right = 352.0
margin_bottom = 288.0
custom_colors/font_color = Color( 0.960784, 0.913725, 0.305882, 1 )
custom_fonts/font = SubResource( 14 )
text = "volume"

[node name="ItemList" type="ItemList" parent="."]
margin_left = 376.0
margin_top = 72.0
margin_right = 800.0
margin_bottom = 192.0
custom_styles/selected_focus = SubResource( 4 )
custom_styles/bg_focus = SubResource( 5 )
custom_styles/selected = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
fixed_column_width = 1
icon_scale = 0.5

[node name="PlayerSpritePreview" type="TextureRect" parent="."]
margin_left = 824.0
margin_top = 48.0
margin_right = 960.0
margin_bottom = 200.0
expand = true
stretch_mode = 6

[node name="HomeButton" type="Button" parent="."]
margin_left = 568.0
margin_top = 448.0
margin_right = 768.0
margin_bottom = 529.0
custom_colors/font_color = Color( 0.960784, 0.913725, 0.305882, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.329412, 1 )
custom_colors/font_color_pressed = Color( 1, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "return"
icon_align = 1
expand_icon = true

[node name="ResetButton" type="Button" parent="."]
margin_left = 240.0
margin_top = 448.0
margin_right = 535.0
margin_bottom = 529.0
custom_colors/font_color = Color( 0.960784, 0.913725, 0.305882, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.329412, 1 )
custom_colors/font_color_pressed = Color( 1, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "reset data"
icon_align = 1
expand_icon = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
mix_target = 1

[node name="ButtonClickedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 384.0
margin_top = 225.0
margin_right = 800.0
margin_bottom = 313.0
custom_styles/slider = SubResource( 10 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 11 )

[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
